# dpu-accelerator-offload

./: .gitignore  meson.build  meson_options.txt
.github/workflows/: build.yml
app/ovs-offload/include/: ood_eth_init.h
app/ovs-offload/init/: ood_ctrl_chan.c  ood_eth_init.c  ood_main.c  ood_repr_init.c
app/smart-nic/cli/: smc_cli.c  smc_ethdev.c  smc_graph_cli.c  smc_lcore.c  smc_mempool.c  smc_pipeline.c
app/smart-nic/include/: smc_init.h
app/smart-nic/init/: smc_graph.c  smc_main.c
app/virtio-l2fwd/: virtio_l2fwd.c
config/: meson.build
dep/dpdk/: meson.build
dep/libnl/: meson.build
doc/: build.rst  conf.py  index.rst  kmod.rst  meson.build  overview.rst
doc/api/: doxy-api-index.md  doxy-api.conf.in  generate_doxygen.sh  meson.build
doc/applications/: ovs-offload.rst  secgw-graph.rst  smart-nic.rst  virtio-l2fwd.rst
doc/howtoguides/: index.rst  ovs.rst
doc/patches/: index.rst
doc/prog_guide/: common.rst  netlink_lib.rst  pem_lib.rst  port_queue_group.rst  vfio_lib.rst  virtio_lib.rst  virtio_net_lib.rst
lib/common/: dao_dma.h
lib/virtio/: dao_virtio.h  meson.build
lib/virtio_net/: dao_virtio_netdev.h  meson.build  virtio_net.h  virtio_net_deq.c  virtio_net_enq.c  virtio_net_priv.h  virtio_netdev.c
